Bug 326429 - Saves even without changes
Summary: Saves even without changes
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.4
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-22 08:33 UTC by kdebugs
Modified: 2014-03-18 16:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kdebugs 2013-10-22 08:33:25 UTC
While open, Parley saves the .kvtml file every few minutes, even if there were no changes at all.

This is not really grave, but it is unnecessary; and it causes some little problems, I've seen the following (probably there are more)
- it makes the .kvtml~ file pretty worthless (because unless you did something the last few minutes the two files are identical)
- the file has a wrong mtime
- it causes unnecessary io, which may not be insignificant anymore on net drives or when the file is synced somewhere etc

Reproducible: Always



Expected Results:  
Check if something changed since the last write
Comment 1 Inge Wallin 2014-03-18 11:00:08 UTC
Git commit 8a512c2639229cc589995e6d4c3f3edeebe529e3 by Inge Wallin.
Committed on 18/03/2014 at 11:03.
Pushed by ingwa into branch 'KDE/4.13'.

Fix bug 326429: Parley autosaves even when there is no change.
REVIEW: post-review :)

M  +3    -1    TODO
M  +8    -1    src/parleydocument.cpp
M  +2    -0    src/parleydocument.h

http://commits.kde.org/parley/8a512c2639229cc589995e6d4c3f3edeebe529e3
Comment 2 kdebugs 2014-03-18 16:24:55 UTC
perfect, thank you! :)