Fix bug 326429: Parley autosaves even when there is no change.

BUG: 326429
REVIEW: post-review :)